--- a/index.html
+++ b/index.html
@@ -21,21 +21,24 @@
 <body>
   
     <main>
-      <img class="banner" src="./images/image-product-mobile.jpg" alt="perfume image">
-      <section>
-        <p class="perfume">PERFUME</p>
-        <h1>Gabrielle Essence Eau De Parfum</h1>
-        <p>A floral, solar and voloptuos interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANNEL.</p>
-        <div class="price-section">
-          <h2 class="price">$149.99</h2>
-          <p class="crossed-price">$169.99</p>
-        </div>
+        <img class="banner-mobile" src="./images/image-product-mobile.jpg" alt="perfume image">
+        <img class="banner-desktop" src="./images/image-product-desktop.jpg" alt="perfume image">
         
-        <button>
-          <img class="cart-icon" src="./images/icon-cart.svg" alt="cart icon">
-          <p class="button-text">Add to Cart</p>
-        </button>
-      </section>
+        <section>
+          <p class="perfume">PERFUME</p>
+          <h1>Gabrielle Essence Eau De Parfum</h1>
+          <p>A floral, solar and voloptuos interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANNEL.</p>
+          <div class="price-section">
+            <h2 class="price">$149.99</h2>
+            <p class="crossed-price">$169.99</p>
+          </div>
+          
+          <button>
+            <img class="cart-icon" src="./images/icon-cart.svg" alt="cart icon">
+            <p class="button-text">Add to Cart</p>
+          </button>
+        </section>
+
     </main>
 
 
